--- a/css/style.css
+++ b/css/style.css
@@ -76,5 +76,136 @@
 .side3 img{
     width: 50%;
 }
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
+
+
+
+.contact{
+    background-color: #333;
+    height: 100vh;
+    
+}
+.form-container{
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    padding-top: 50px;
+}
+.main{
+    min-height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+    
+
+}
+.main form{
+    width: 670px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    backdrop-filter: blur(10px);
+    flex-wrap: wrap;
+    background-image: url(../images/contact-bg.jpg);
+    background-size: cover;
+    margin-bottom: 60px;
+   
+    
+    
+}
+ .main form h1{
+    color: white;
+    font-weight: bold;
+    margin-top: 20px;
+    width: 500px;
+    text-align: center;
+ }
+ .main form input{
+    width: 290px;
+    height: 40px;
+    padding-left: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    background: none;
+    border-bottom: 2px solid white;
+
+ }
+ .main form input::placeholder{
+    color: #ddd;
+ }
+ .main form #lastborn
+ .main form #mobile{
+    margin-left: 20px;
+ }
+ .main form h4{
+    color: white;
+    font-weight: 300;
+    width: 600px;
+    margin-top: 20px;
+    text-align: center;
+ }
+ .main form textarea{
+    background: none;
+    border: none;
+    border-bottom: 2px solid white;
+    color: white;
+    font-weight: 200;
+    font-size: 15px;
+    padding: 10px;
+    outline: none;
+    min-height: 80px;
+    min-width: 600px;
+    max-width: 600px;
+    max-height: 80px;
+ }
+ textarea::-webkit-scrollbar{
+    width: 1em;
+    
+ }
+ textarea::-webkit-scrollbar-thumb{
+    background-color: yellow;
+    
+
+ }
+ main form #button{
+    border: none;
+    border-radius: 5px;
+    margin-top: 20px;
+    font-weight: 600;
+    font-size: 20px;
+    width: 100px;
+    padding: 0;
+    margin-right: 500px;
+    margin-bottom: 30px;
+    transition: 0.3s;
+    color: white;
+ }
+.main form #button:hover{
+    opacity: 0.7;
+}
+button {
+    text-align: center;
+    border: 2px solid red;
+    border-radius: 5px;
+    margin-left: 250px;
+    margin-top: 20px;
+    padding: 5px;
+    
+}
+button a{
+    text-decoration: none;
+    font-size: 15px;
+    color: black;
+    font-weight: bold;
+}
+button :hover{
+    color: blue;
+}
 
